# fake-datagen

./: .gitignore  pyproject.toml
fake_datagen/: generators.py  global_types.py  main.py  perf_tests.py  playground.py  type_defs.py  utils.py
fake_datagen/data/: customers.csv  products.csv  stores.csv
fake_datagen/data/old/: customers-old.csv  products.csv  stores.csv
fake_datagen/examples/: examples.py
